3234: Changed React datepicker look&feel to be more inline with the rest of CFL app

--- a/owa/package.json
+++ b/owa/package.json
@@ -41,6 +41,7 @@
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
     "react-codemirror2": "^6.0.0",
+    "react-datepicker": "4.25.0",
     "react-dom": "^16.4.2",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.1",
