--- a/owa/pom.xml
+++ b/owa/pom.xml
@@ -51,7 +51,7 @@
                         </goals>
                         <phase>generate-resources</phase>
                         <configuration>
-                            <arguments>run build:prod</arguments>
+                            <arguments>run build:dev</arguments>
                         </configuration>
                     </execution>
                 </executions>
